test/failed-2/secret/subtyping/references/ill-typed/references-2.stella
// ERROR_MISSING_RECORD_FIELDS
language core;
extend with
  #structural-subtyping,
  #references,
  #records;

fn main(x : &{ a : Nat, b : Bool }) -> &{ a : Nat } {
  return x
}
